--- a/index.html
+++ b/index.html
@@ -84,20 +84,20 @@
                         <div class="col-lg-4">
                             <div class="game_keys">
                                 <div class="form-row" style="justify-content: center; align-items: center">
-                                    <label for="UP" class="col-sm-2 col-form-label"><img src="project_files/images/up.png" height="64" width="64"/></label>
+                                    <label class="col-sm-2 col-form-label"><img src="project_files/images/up.png" height="64" width="64"/></label>
                                     <input type="text" onkeypress="return myKeyPress(event)" class="col-sm-10 form-control" id="UP" placeholder="PRESS YOUR KEY HERE...">
 
                                 </div>
                                 <div class="form-row" style="justify-content: center; align-items: center">
-                                    <label for="DOWN" class="col-sm-2 col-form-label"><img src="project_files/images/down.png" height="64" width="64"/></label>
+                                    <label class="col-sm-2 col-form-label"><img src="project_files/images/down.png" height="64" width="64"/></label>
                                     <input type="text" onkeypress="return myKeyPress(event)" class="col-sm-10 form-control" id="DOWN" placeholder="PRESS YOUR KEY HERE...">
                                 </div>
                                 <div class="form-row" style="justify-content: center; align-items: center">
-                                    <label for="LEFT" class="col-sm-2 col-form-label"><img src="project_files/images/left.png" height="64" width="64"/></label>
+                                    <label class="col-sm-2 col-form-label"><img src="project_files/images/left.png" height="64" width="64"/></label>
                                     <input type="text" onkeypress="return myKeyPress(event)" class="col-sm-10 form-control" id="LEFT" placeholder="PRESS YOUR KEY HERE...">
                                 </div>
                                 <div class="form-row" style="justify-content: center; align-items: center">
-                                    <label for="RIGHT" class="col-sm-2 col-form-label"><img src="project_files/images/right.png" height="64" width="64"/></label>
+                                    <label class="col-sm-2 col-form-label"><img src="project_files/images/right.png" height="64" width="64"/></label>
                                     <input type="text" onkeypress="return myKeyPress(event)" class="col-sm-10 form-control" id="RIGHT" placeholder="PRESS YOUR KEY HERE...">
                                 </div>
                             </div>
@@ -232,9 +232,9 @@
                 <br/>
                 <h1 style="display: block;margin-left: 40%;">GAME FINISHED!</h1>
                 <div class="col-lg-4">
-                    <label for="lblName">PLAYER NAME:</label>
+                    <label >PLAYER NAME:</label>
                     <input class="form-control" id="lblName" type="text" readonly="readonly"/>
-                    <label for="lblScore">YOUR SCORE:</label>
+                    <label >YOUR SCORE:</label>
                     <input class="form-control" id="lblScore" type="text"/>
                     <label for="lblResult">VERDICT:</label>
                     <input class="form-control" id="lblResult" type="text"/>
