--- a/index.html
+++ b/index.html
@@ -197,10 +197,15 @@
                 <br/>
             </section>
             <section id="game_page2">
+                <img id="M1" width="60" height="60" style="display: none;" src="project_files/images/monster_1.png">
+                <img id="M2" width="60" height="60" style="display: none;" src="project_files/images/monster_2.png">
+                <img id="M3" width="60" height="60" style="display: none;" src="project_files/images/monster_3.png">
+                <img id="Pac" width="60" height="60" style="display: none;" src="project_files/images/pacman.png">
+                <img id="Mush" width="60" height="60" style="display: none;" src="project_files/images/mushroom.png">
+                <img id="Life" width="60" height="60" style="display: none;" src="project_files/images/life.png">
                 <br/>
                 <br/>
                 <br/>
-                <img id="can_background" width="600" height="600" style="display: none;" src="project_files/images/canvas_patt.jpg">
                 <div class="row">
                     <div class="col-lg-4">
                         <br/>
