--- a/index.html
+++ b/index.html
@@ -239,13 +239,13 @@
                 <h1 style="display: block;margin-left: 40%;">GAME FINISHED!</h1>
                 <div class="col-lg-4">
                     <label >PLAYER NAME:</label>
-                    <input class="form-control" id="lblName" type="text" readonly="readonly"/>
+                    <!--<input class="form-control" id="lblName" type="text" readonly="readonly"/>-->
                     <label >YOUR SCORE:</label>
-                    <input class="form-control" id="lblScore" type="text"/>
+                    <!--<input class="form-control" id="lblScore" type="text"/>-->
                     <label for="lblResult">VERDICT:</label>
                     <input class="form-control" id="lblResult" type="text"/>
                     <button onclick="New_Game()" type="button" class="btn btn-primary btn-lg">NEW GAME</button>
-                    <button onclick="Show_Tab('HOME')" type="button" class="btn btn-primary btn-lg">BACK HOME</button>
+                    <button onclick="Show_Tab('Home')" type="button" class="btn btn-primary btn-lg">BACK HOME</button>
                     <br/>
                 </div>
                 <br/>
