--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <h1> test home </h1>
                     <br/>
                     <br/>
-                    <button onclick="New_Game()" type="button" class="btn btn-primary btn-lg">Go to the Game
+                    <button onclick="Show_Tab('game_page1')" type="button" class="btn btn-primary btn-lg">Go to the Game
                     </button>
                     <br/>
                     <br/>
@@ -85,20 +85,20 @@
                             <div class="game_keys">
                                 <div class="form-row" style="justify-content: center; align-items: center">
                                     <label class="col-sm-2 col-form-label"><img src="project_files/images/up.png" height="64" width="64"/></label>
-                                    <input type="text" onkeydown="myKeyPress(this,event)" class="col-sm-10 form-control" id="UP" maxlength="1" placeholder="PRESS YOUR KEY HERE...">
+                                    <input type="text" onkeydown="myKeyPress(this,event)" class="col-sm-10 form-control" id="UP" maxlength="1" placeholder="PRESS YOUR KEY HERE...(default Arrow up)">
 
                                 </div>
                                 <div class="form-row" style="justify-content: center; align-items: center">
                                     <label class="col-sm-2 col-form-label"><img src="project_files/images/down.png" height="64" width="64"/></label>
-                                    <input type="text" onkeydown="myKeyPress(this,event)" class="col-sm-10 form-control" id="DOWN" maxlength="1" placeholder="PRESS YOUR KEY HERE...">
+                                    <input type="text" onkeydown="myKeyPress(this,event)" class="col-sm-10 form-control" id="DOWN" maxlength="1" placeholder="PRESS YOUR KEY HERE...(default Arrow down)">
                                 </div>
                                 <div class="form-row" style="justify-content: center; align-items: center">
                                     <label class="col-sm-2 col-form-label"><img src="project_files/images/left.png" height="64" width="64"/></label>
-                                    <input type="text" onkeydown="myKeyPress(this,event)" class="col-sm-10 form-control" id="LEFT" maxlength="1" placeholder="PRESS YOUR KEY HERE...">
+                                    <input type="text" onkeydown="myKeyPress(this,event)" class="col-sm-10 form-control" id="LEFT" maxlength="1" placeholder="PRESS YOUR KEY HERE...(default Arrow left)">
                                 </div>
                                 <div class="form-row" style="justify-content: center; align-items: center">
                                     <label class="col-sm-2 col-form-label"><img src="project_files/images/right.png" height="64" width="64"/></label>
-                                    <input type="text" onkeydown="myKeyPress(this,event)" class="col-sm-10 form-control" id="RIGHT" maxlength="1" placeholder="PRESS YOUR KEY HERE...">
+                                    <input type="text" onkeydown="myKeyPress(this,event)" class="col-sm-10 form-control" id="RIGHT" maxlength="1" placeholder="PRESS YOUR KEY HERE...(default Arrow right)">
                                 </div>
                             </div>
                         </div>
@@ -189,7 +189,7 @@
                     </div>
                     <div class="form-group row">
                         <div class="col-lg-6">
-                            <button onclick="Start_Game()" type="button" class="btn btn-primary btn-lg">START GAME</button>
+                            <button onclick="New_Game()" type="button" class="btn btn-primary btn-lg">START GAME</button>
                             <button onclick="RandomSettings()" type="button" class="btn btn-primary btn-lg">RANDOM SETTINGS</button>
                         </div>
                     </div>
@@ -239,9 +239,9 @@
                 <h1 style="display: block;margin-left: 40%;">GAME FINISHED!</h1>
                 <div class="col-lg-4">
                     <label >PLAYER NAME:</label>
-                    <!--<input class="form-control" id="lblName" type="text" readonly="readonly"/>-->
+                    <input class="form-control" type="text" readonly="readonly"/>
                     <label >YOUR SCORE:</label>
-                    <!--<input class="form-control" id="lblScore" type="text"/>-->
+                    <input class="form-control"  type="text"/>
                     <label for="lblResult">VERDICT:</label>
                     <input class="form-control" id="lblResult" type="text"/>
                     <button onclick="New_Game()" type="button" class="btn btn-primary btn-lg">NEW GAME</button>
