--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
 <body onload="First_Load()">
 <div class="row">
     <header>
-        <!--<div class="nav">-->
         <div id="Logo">
             <img src="project_files/images/game-logo.png" width="400"
                  height="150" alt="Logo">
@@ -31,7 +30,6 @@
                 <li><a href="#" onclick="Show_Tab('About')">About</a></li>
             </ul>
         </div>
-        <!--</div>-->
     </header>
 </div>
 <div class="content">
@@ -196,7 +194,7 @@
                 </form>
                 <br/>
             </section>
-            <section id="game_page2">
+            <sectio id="game_page2">
                 <img id="M1" width="60" height="60" style="display: none;" src="project_files/images/monster_1.png">
                 <img id="M2" width="60" height="60" style="display: none;" src="project_files/images/monster_2.png">
                 <img id="M3" width="60" height="60" style="display: none;" src="project_files/images/monster_3.png">
@@ -228,10 +226,10 @@
                     </div>
                     <div class="col-lg-8">
                         <br/>
-                        <canvas style="margin-left: 30%" id="canvas" height="600" width="600"></canvas>
+                        <canvas style="margin-left: 30%" id="canvas" height="500" width="500"></canvas>
                     </div>
                 </div>
-            </section>
+            </sectio>
             <section id="game_page3">
                 <br/>
                 <br/>
