--- a/index.html
+++ b/index.html
@@ -134,15 +134,15 @@
                             <div>
                                 <div class="form-row" style="justify-content: center; align-items: center">
                                     <label class="col-lg-8 col-form-label">5 POINTS BALLS COLOR</label>
-                                    <input type="color" class="col-lg-1 form-control" id="5P_color" value="#009933">
+                                    <input type="color" name="ColorOption" class="col-lg-1 form-control" id="5P_color" value="#009933">
                                 </div>
                                 <div class="form-row" style="justify-content: center; align-items: center">
                                     <label class="col-lg-8 col-form-label">15 POINTS BALLS COLOR</label>
-                                    <input type="color" class="col-lg-1 form-control" id="15P_color" value="#0000cc">
+                                    <input type="color" name="ColorOption" class="col-lg-1 form-control" id="15P_color" value="#0000cc">
                                 </div>
                                 <div class="form-row" style="justify-content: center; align-items: center">
                                     <label class="col-lg-8 col-form-label">25 POINTS BALLS COLOR</label>
-                                    <input type="color" class="col-lg-1 form-control" id="25P_color" value="#ff0000">
+                                    <input type="color" name="ColorOption" class="col-lg-1 form-control" id="25P_color" value="#ff0000">
                                 </div>
                             </div>
                         </div>
