--- a/index.html
+++ b/index.html
@@ -42,8 +42,7 @@
                     <h1> test home </h1>
                     <br/>
                     <br/>
-                    <button onclick="New_Game()" type="button" class="btn btn-primary btn-lg">Go to the Game
-                    </button>
+                    <button onclick="Show_Tab('game_page1')" type="button" class="btn btn-primary btn-lg">Go to the Game</button>
                     <br/>
                     <br/>
                     <br/>
@@ -83,20 +82,20 @@
                             <div class="game_keys">
                                 <div class="form-row" style="justify-content: center; align-items: center">
                                     <label class="col-sm-2 col-form-label"><img src="project_files/images/up.png" height="64" width="64"/></label>
-                                    <input type="text" onkeydown="myKeyPress(this,event)" class="col-sm-10 form-control" id="UP" maxlength="1" placeholder="PRESS YOUR KEY HERE...(default Arrow up)">
+                                    <input type="text" onkeydown="SetKeys(this, event)" class="col-sm-10 form-control" id="UP" maxlength="1" placeholder="PRESS YOUR KEY HERE...(default Arrow up)">
 
                                 </div>
                                 <div class="form-row" style="justify-content: center; align-items: center">
                                     <label class="col-sm-2 col-form-label"><img src="project_files/images/down.png" height="64" width="64"/></label>
-                                    <input type="text" onkeydown="myKeyPress(this,event)" class="col-sm-10 form-control" id="DOWN" maxlength="1" placeholder="PRESS YOUR KEY HERE...(default Arrow down)">
+                                    <input type="text" onkeydown="SetKeys(this, event)" class="col-sm-10 form-control" id="DOWN" maxlength="1" placeholder="PRESS YOUR KEY HERE...(default Arrow down)">
                                 </div>
                                 <div class="form-row" style="justify-content: center; align-items: center">
                                     <label class="col-sm-2 col-form-label"><img src="project_files/images/left.png" height="64" width="64"/></label>
-                                    <input type="text" onkeydown="myKeyPress(this,event)" class="col-sm-10 form-control" id="LEFT" maxlength="1" placeholder="PRESS YOUR KEY HERE...(default Arrow left)">
+                                    <input type="text" onkeydown="SetKeys(this, event)" class="col-sm-10 form-control" id="LEFT" maxlength="1" placeholder="PRESS YOUR KEY HERE...(default Arrow left)">
                                 </div>
                                 <div class="form-row" style="justify-content: center; align-items: center">
                                     <label class="col-sm-2 col-form-label"><img src="project_files/images/right.png" height="64" width="64"/></label>
-                                    <input type="text" onkeydown="myKeyPress(this,event)" class="col-sm-10 form-control" id="RIGHT" maxlength="1" placeholder="PRESS YOUR KEY HERE...(default Arrow right)">
+                                    <input type="text" onkeydown="SetKeys(this, event)" class="col-sm-10 form-control" id="RIGHT" maxlength="1" placeholder="PRESS YOUR KEY HERE...(default Arrow right)">
                                 </div>
                             </div>
                         </div>
@@ -240,7 +239,7 @@
                         <input class="form-control" type="text" id="lblLiveFinish" readonly="readonly" value=""/>
                         <label for="lblVerdict">VERDICT:</label>
                         <input class="form-control" type="text" id="lblVerdict" readonly="readonly" value=""/>
-                        <button onclick="New_Game()" type="button" class="btn btn-primary btn-lg">NEW GAME</button>
+                        <button onclick="Show_Tab('game_page1')" type="button" class="btn btn-primary btn-lg">NEW GAME</button>
                         <button onclick="Show_Tab('Home')" type="button" class="btn btn-primary btn-lg">BACK HOME</button>
                         <br/>
                     </div>
