eran final pushh!!

--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
                             <p>
 
                                     Eran Edri 302546056
-                                    <p></p> 
+                                    <p></p>
                                     Omer rauchbach 204663041
-                                    <p></p>       
+                                    <p></p>
                                     jQuery Plugin:
                                     jquery-3.4.0.js
                                     <p></p>
@@ -66,7 +66,7 @@
                     <h1> test home </h1>
                     <br/>
                     <br/>
-                    <button onclick="Show_Tab('game_page1')" type="button" class="btn btn-primary btn-lg">Go to the Game</button>
+                    <!--<button onclick="Show_Tab('game_page1')" type="button" class="btn btn-primary btn-lg">Go to the Game</button>-->
                     <br/>
                     <br/>
                     <br/>
@@ -75,16 +75,16 @@
                 </div>
             </section>
             <section id="Register">
-                <div class="Register">                                      
-                    <h1> Sign Up</h1>                            
+                <div class="Register">
+                    <h1> Sign Up</h1>
                     <input type="text" name="username" id="username"  placeholder="Username"/>
                     <input type="text" name="email" id="email" placeholder="Email"/>
-                    <input type="password" name="password" id="password" placeholder="Password"/>                         
+                    <input type="password" name="password" id="password" placeholder="Password"/>
                     <input type="text" name="First-Name" id="firstName" placeholder="First Name"/>
                     <input type="text" name="Last-Name" id="lastName" placeholder="Last Name"/>
                     <input type="date" name="datepicker" id ="datepicker" placeholder="Date">
                     <button onclick="Game_Register()" type="button" class="btn btn-primary btn-lg">Sign Up
-                        </button>  
+                        </button>
                     <br/>
                     <br/>
                     <br/>
@@ -94,8 +94,8 @@
                     <br/>
                     <br/>
                     <br/>
-                    <br/>                             
-                </div>                                                               
+                    <br/>
+                </div>
             </section>
             <section id="Login">
                 <br/>
@@ -104,7 +104,7 @@
                         <input type="text" name="username" id=login_userName placeholder="Username"/>
                         <input type="password" name="password" id=login_password  placeholder="Password"/>
                         <button onclick="Game_Login()" type="button" class="btn btn-primary btn-lg">login
-                            </button> 
+                            </button>
                 </div>
                 <br/>
                 <br/>
@@ -261,7 +261,7 @@
                         <input class="form-control" id="lblTime" type="text"/>
                         <label for="lblLive">LIVES:</label>
                         <input class="form-control" id="lblLive" type="text" readonly="readonly"/>
-                        <button onclick="Finish_Game()" type="button" class="btn btn-primary btn-lg">test for page 3</button>
+                        <!--<button onclick="Finish_Game()" type="button" class="btn btn-primary btn-lg">test for page 3</button>-->
                         <br/>
                     </div>
                     <div class="col-lg-8">
